20220303-deploy-to-k8s/k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-k8s.yml
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose-k8s.yml
        kompose.version: 1.25.0 (a70f80cc)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: env-k8s-env
            - name: POSTGRES_PASSWORD_FILE
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD_FILE
                  name: env-k8s-env
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: env-k8s-env
          image: docker.io/ynonp/theboard-db:1.0
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /run/secrets/dbpassword
              name: dbpassword
      restartPolicy: Always
      volumes:
        - name: dbpassword
          secret:
            items:
              - key: dbpassword
                path: dbpassword
            secretName: dbpassword
status: {}
